re-parse-proc-macro/src/snapshots/re_parse_proc_macro__parser__tests__invalid_variable.snap
---
source: re-parse-proc-macro/src/parser.rs
expression: "parse(\"{a+test}\")"
snapshot_kind: text
---
Err(
    UnexpectedToken {
        got: Postfix(
            Plus,
        ),
        expected: RightBrace,
    },
)
