re-parse-proc-macro/src/snapshots/re_parse_proc_macro__parser__tests__parenthesis.snap
---
source: re-parse-proc-macro/src/parser.rs
expression: "parse(\"(ab)\")"
snapshot_kind: text
---
Ok(
    And(
        Literal(
            Char(
                'a',
            ),
        ),
        Literal(
            Char(
                'b',
            ),
        ),
    ),
)
