re-parse-proc-macro/src/snapshots/re_parse_proc_macro__parser__tests__postfix_error-2.snap
---
source: re-parse-proc-macro/src/parser.rs
expression: "parse(\"a**\")"
snapshot_kind: text
---
Err(
    ExpectedEof {
        got: Postfix(
            Star,
        ),
    },
)
