re-parse-proc-macro/src/snapshots/re_parse_proc_macro__parser__tests__postfix_operator-2.snap
---
source: re-parse-proc-macro/src/parser.rs
expression: "parse(\"a+\")"
snapshot_kind: text
---
Ok(
    OneOrMore(
        Literal(
            Char(
                'a',
            ),
        ),
    ),
)
