re-parse-proc-macro/src/snapshots/re_parse_proc_macro__parser__tests__range-2.snap
---
source: re-parse-proc-macro/src/parser.rs
expression: "parse(\"[a-z1234A-Z]\")"
snapshot_kind: text
---
Ok(
    Or(
        Literal(
            Range(
                'a',
                'z',
            ),
        ),
        Literal(
            Char(
                '1',
            ),
        ),
        Literal(
            Char(
                '2',
            ),
        ),
        Literal(
            Char(
                '3',
            ),
        ),
        Literal(
            Char(
                '4',
            ),
        ),
        Literal(
            Range(
                'A',
                'Z',
            ),
        ),
    ),
)
