re-parse-proc-macro/src/snapshots/re_parse_proc_macro__parser__tests__range.snap
---
source: re-parse-proc-macro/src/parser.rs
expression: "parse(\"[a-z]\")"
snapshot_kind: text
---
Ok(
    Literal(
        Range(
            'a',
            'z',
        ),
    ),
)
