re-parse-proc-macro/src/snapshots/re_parse_proc_macro__parser__tests__variable.snap
---
source: re-parse-proc-macro/src/parser.rs
expression: "parse(\"{a}\")"
snapshot_kind: text
---
Ok(
    Variable(
        "a",
    ),
)
